--- a/app/components/sl-item.html
+++ b/app/components/sl-item.html
@@ -1,6 +1,6 @@
 
 <script type="text/template" id="sl-item-tpl">
-<li class="list-group-item">
+<li class="">
 
     <label class="">
         <input x-property="bought"
@@ -11,7 +11,7 @@
         <span x-property="label"></span>
     </label>
 
-    <div class="pull-right">
+    <div class="">
     <input name="quantity"
         class=""
         x-property="quantity"
