--- a/app/components/sl-suggestions.html
+++ b/app/components/sl-suggestions.html
@@ -1,19 +1,22 @@
+<link rel="import" href="sl-header.html">
 <link rel="import" href="sl-footer.html">
 
 <script type="text/template" id="sl-suggestions-tpl">
 
-<article class="container">
-    <div class="panel panel-default">
+<sl-header></sl-header>
 
-    <div class="panel-heading">Suggestions</div>
+<article class="">
+    <div class="">
 
-    <ul x-property="list" class="list-group"></ul>
+    <div class="">Suggestions</div>
+
+    <ul x-property="list" class=""></ul>
 
     </div>
 </article>
 
 <sl-footer>
-    <button class="btn btn-default navbar-btn" x-property="clearBtn">clear</button>
+    <button class="" x-property="clearBtn">clear</button>
 </sl-footer>
 
 </script>
