--- a/app/components/sl-footer.html
+++ b/app/components/sl-footer.html
@@ -1,6 +1,6 @@
 <script type="text/template" id="sl-footer-tpl">
-    <footer class="navbar navbar-default navbar-fixed-bottom">
-        <div class="container" x-content></div>
+    <footer class="">
+        <div class="" x-content></div>
     </footer>
 </script>
 
