--- a/app/components/sl-items.html
+++ b/app/components/sl-items.html
@@ -1,15 +1,18 @@
+<link rel="import" href="sl-header.html">
 <link rel="import" href="sl-footer.html">
 <link rel="import" href="sl-item.html">
 
 <script type="text/template" id="sl-items-tpl">
 
-<article class="container">
-    <form x-property="form" class="form-inline" role="form" name="addItemForm" onsubmit="return false;">
+<sl-header></sl-header>
+
+<article class="">
+    <form x-property="form" class="" role="form" name="addItemForm" onsubmit="return false;">
 
         <datalist hidden x-property="suggestionList" id="suggestionList"></datalist>
 
-        <div class="form-group">
-            <input class="form-control"
+        <div class="">
+            <input class=""
                 x-property="label"
                 name="label"
                 placeholder="label"
@@ -19,8 +22,8 @@
                 required>
         </div>
 
-        <div class="form-group">
-            <input class="form-control"
+        <div class="">
+            <input class=""
                 name="quantity"
                 placeholder="quantity"
                 title="the item's quantity"
@@ -28,21 +31,21 @@
                 min="0">
         </div>
 
-        <input class="btn btn-default" type="submit" value="add" title="add the item">
+        <input class="" type="submit" value="add" title="add the item">
     </form>
 
     <br>
 
-    <div class="panel panel-default">
-        <div class="panel-heading">Items</div>
-        <ul x-property="list" class="list-group"></ul>
+    <div class="">
+        <div class="">Items</div>
+        <ul x-property="list" class=""></ul>
     </div>
 
 </article>
 
 <sl-footer>
-    <button id="clearAllItemsBtn" class="btn btn-default navbar-btn" type="button">Clear all</button>
-    <button id="clearBoughtItemsBtn" class="btn btn-default navbar-btn" type="button">Clear bought items</button>
+    <button id="clearAllItemsBtn" class="" type="button">Clear all</button>
+    <button id="clearBoughtItemsBtn" class="" type="button">Clear bought items</button>
 </sl-footer>
 
 </script>
