--- a/app/components/sl-app.html
+++ b/app/components/sl-app.html
@@ -1,63 +1,87 @@
-<link rel="import" href="sl-items.html">
-<link rel="import" href="sl-suggestions.html">
+<link rel="import" href="sl-header.html">
+<link rel="import" href="sl-view-items.html">
+<link rel="import" href="sl-view-suggestions.html">
 
 <script type="text/template" id="sl-app-tpl">
-    <section x-property="view"></section>
+    <x-layout>
+        <header>
+            <sl-header></sl-header>
+        </header>
+        <section>
+                <x-deck x-property="deck">
+                    <x-card transition-type="fade-scale">
+                        <sl-view-items></sl-view-items>
+                    </x-card>
+                    <x-card transition-type="fade-scale">
+                        <sl-view-suggestions></sl-view-suggestions>
+                    </x-card>
+                </x-deck>
+        </section>
+    </x-layout>
 </script>
 
 <script>
     (function() {
 
-        var owner = document._currentScript.ownerDocument;
-        var tpl = owner.querySelector('#sl-app-tpl').textContent;
+        var tpl = document._currentScript.ownerDocument.getElementById('sl-app-tpl').innerHTML;
 
         xtag.register('sl-app', {
             mixins: ['templated'],
             lifecycle: {
-                created: function() {
+                created: function () {
                     this.applyTemplate(tpl);
                 },
-                inserted: function() {
+                inserted: function () {
                     this.cqrs = cqrs({
                         owner: 'sl-app'
                     });
-                    this.cqrs.when('showItemsView').invoke(this.showItemsView.bind(this));
-                    this.cqrs.when('showSuggestionsView').invoke(this.showSuggestionsView.bind(this));
+                    this.cqrs.when('showView').invoke(this.showView.bind(this));
 
-                    this.showItemsView();
+                    this.xtag.deck.showCard(0);
+
+                    this.loadItems().then(function () {
+                        this.loadSuggestions()
+                    }.bind(this));
                 },
-                removed: function() {
+                removed: function () {
                     this.cqrs.destroy();
                 }
             },
             methods: {
-                closeCurrentView: function() {
-                    var children = [].concat.apply([], this.xtag.view.children);
-                    children.forEach(function(child) {
-                        child.parentNode.removeChild(child);
+                loadItems: function() {
+                    return this.cqrs.call('listItems').then(function(items) {
+                        this.cqrs.publish('itemsAdded', items).then(null, function(error) {
+                            var msg = error && error.message ? error.message : error;
+                            console.warn(error);
+                            alert(msg);
+                        });
+                    }.bind(this)).then(null, function(error) {
+                        var msg = error && error.message ? error.message : error;
+                        console.warn(error);
+                        alert(msg);
                     });
                 },
-                showItemsView: function() {
-                    this.closeCurrentView();
-
-                    var slItems = document.createElement('sl-items');
-                    this.xtag.view.appendChild(slItems);
-
-                    setTimeout(function() {
-                        this.cqrs.publish('viewChanged', 'items');
-                    }.bind(this), 0);
+                loadSuggestions: function() {
+                    return this.cqrs.call('listSuggestions').then(function(suggestions) {
+                        this.cqrs.publish('suggestionsAdded', suggestions).then(null, function(error) {
+                            var msg = error && error.message ? error.message : error;
+                            console.warn(error);
+                            alert(msg);
+                        });
+                    }.bind(this)).then(null, function(error) {
+                        var msg = error && error.message ? error.message : error;
+                        console.warn(error);
+                        alert(msg);
+                    });
                 },
-                showSuggestionsView: function() {
-                    this.closeCurrentView();
-
-                    var slSuggestions = document.createElement('sl-suggestions');
-                    this.xtag.view.appendChild(slSuggestions);
-
-                    setTimeout(function() {
-                        this.cqrs.publish('viewChanged', 'suggestions');
-                    }.bind(this), 0);
+                showView: function (view) {
+                    var el = this.querySelector(view);
+                    if (el) {
+                        this.xtag.deck.showCard(el.parentNode, 'forward');
+                    }
                 }
             }
         });
+
     }());
 </script>
