--- a/app/components/sl-items-add.html
+++ b/app/components/sl-items-add.html
@@ -1,7 +1,7 @@
 
 <script type="text/template" id="sl-items-add-tpl">
     <br>
-    <form class="form-inline" submit="return false;">
+    <form x-property="form" class="form-inline" submit="return false;">
         <datalist hidden x-property="suggestionList" id="suggestionList"></datalist>
 
         <input
