--- a/components/sl-items-add.html
+++ b/components/sl-items-add.html
@@ -1,5 +1,5 @@
 <script type=text/template id=sl-items-add-tpl><br>
-    <form class="form-inline" submit="return false;">
+    <form x-property="form" class="form-inline" submit="return false;">
         <datalist hidden x-property="suggestionList" id="suggestionList"></datalist>
 
         <input
